hphp/test/zend/good/Zend/tests/ns_077_5.php.expectf

Fatal error: Undefined constant 'unknown' in %s/ns_077_5.php on line 3
